--- a/Instagram/Views/Home/Index.cshtml
+++ b/Instagram/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 
                         <h5 class="card-title">@post.Titolo</h5>
                         <p class="card-text">@post.Descrizione</p>
-                        <!--<a href="@Url.Action("PerID", "Home", new { id = post.Id })" class="btn btn-info">Dettaglio foto</a>-->
+                        <a href="@Url.Action("PostIdPublico", "Home", new { id = post.Id })" class="btn btn-info">Dettaglio foto</a>
                     </div>
                 </div>
             </div>
