--- a/Instagram/Views/Home/Create.cshtml
+++ b/Instagram/Views/Home/Create.cshtml
@@ -8,7 +8,7 @@
         <div class="mb-3">
             <strong>Titolo</strong>
             <input asp-for="Post.Titolo" class="d-block w-100" />
-            <span asp-validation-for=Post.Titolo class="text-danger"></span>
+            <span class="text-danger"  asp-validation-for=Post.Titolo></span>
         </div>
         <div class="mb-3">
             <strong>Descrizione</strong>
