--- a/Instagram/Views/Home/Account.cshtml
+++ b/Instagram/Views/Home/Account.cshtml
@@ -2,3 +2,40 @@
     ViewData["Title"] = "Registrazione";
 }
 
+﻿@using Instagram.Data;
+@model InstagramModel;
+<!--registrazione con 
+    email o numero di telefono
+    nome e cognome 
+    nome utente
+    password
+-->
+<div class="container">
+    <form asp-controller="Home" asp-action="Create" method="post">
+        @Html.AntiForgeryToken()
+        <div class="mb-3">
+            <strong>email o numero di telefono </strong>
+            <input asp-for="Utente.Email" class="d-block w-100" />
+            <span class="text-danger" asp-validation-for=Utente.Email></span>
+        </div>
+        <div class="mb-3">
+            <strong>nome e cognome</strong>
+            <input asp-for="Utente.Name" class="d-block w-100" />
+            <span class="text-danger" asp-validation-for=Utente.Name></span>
+        </div>
+        <div class="mb-3">
+            <strong>Nome utente</strong>
+            <input asp-for="Utente.NameAcount" class="d-block w-100" />
+            <span class="text-danger" asp-validation-for=Utente.NameAcount></span>
+        </div>
+        <div class="mb-3">
+            <strong>Password</strong>
+            <input asp-for="Utente.Password" class="d-block w-100" />
+            <span class="text-danger" asp-validation-for=Utente.Password></span>
+        </div>
+        <div class="text-end">
+            <input type="submit" class="btn btn-small btn-info" value="PostInserito">
+        </div>
+    </form>
+</div>
+<a href="@Url.Action("Index", "Home")">Torna in Home </a>
