controller per creare account get e post

--- a/Instagram/Views/Home/Index.cshtml
+++ b/Instagram/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <a href="@Url.Action("Create", "Home")">Crea Post</a>
-
+    <a href="@Url.Action("CreateAc", "Home")">Crea Acount</a>
     @{
         foreach (var post in Model)
         {
