cambio di piani poer il momento faccio la registrazione utente tramite pachetti NET

--- a/Instagram/Views/Home/Index.cshtml
+++ b/Instagram/Views/Home/Index.cshtml
@@ -8,7 +8,22 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <a href="@Url.Action("Create", "Home")">Crea Post</a>
-    <a href="@Url.Action("CreateAc", "Home")">Crea Acount</a>
+
+    <!--<a href="@Url.Action("CreateAc", "Home")">Crea Acount</a>-->
+
+
+
+    <div class="collapse d-block navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="@Url.Action("Index", "User")">Admin</a>
+            </li>
+            <!-- code omitted -->
+            <partial name="_LoginPartial" />
+        </ul>
+    </div>
+
+
     @{
         foreach (var post in Model)
         {
