--- a/Instagram/Views/Home/Create.cshtml
+++ b/Instagram/Views/Home/Create.cshtml
@@ -18,6 +18,11 @@
             <input asp-for="Post.Descrizione" class="d-block w-100" />
             <span class="text-danger" asp-validation-for="Post.Descrizione"></span>
         </div>
+        <div class="form-field">
+            
+            <label asp-for="@Model.ImgFile">Image file</label>
+            <input type="file" asp-for="@Model.ImgFile" />
+        </div>
 
         <div class="text-end">
             <input type="submit" class="btn btn-small btn-info" value="Post Inserito">
