--- a/Instagram/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Instagram/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,12 +4,17 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<!--<h1>@ViewData["Title"]</h1>-->
 
-<div class="row">
-    <div class="col-md-4">
+<div class="row rettangolo">
+    <div class="col-12">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <div>
+                <img class="logo" src="/imgInstagram/logotipo-instagram-2016.jpg" alt="Alternate Text" />
+            </div>
+            <div>
+                <span>Iscriviti per vedere le foto e i video dei tuoi amici.</span>
+            </div>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -27,10 +32,11 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Avanti</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-12">
         <section>
             <h3>Use another service to register.</h3>
             <hr />
