--- a/Instagram/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Instagram/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,34 +6,34 @@
 
 <!--<h1>@ViewData["Title"]</h1>-->
 
-<div class="row rettangolo">
-    <div class="col-12">
+<div class="d-flex row text-center rettangolo">
+    <div class="col-12  align-items-center">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div>
-                <img class="logo" src="/imgInstagram/logotipo-instagram-2016.jpg" alt="Alternate Text" />
+            <div class="contenitoreloggo">
+                <img class="logo justify-content-center" src="/imgInstagram/logotipo-instagram-2016.jpg" alt="Alternate Text" />
             </div>
-            <div>
-                <span>Iscriviti per vedere le foto e i video dei tuoi amici.</span>
+            <div class=" ">
+                <span class="text-center">Iscriviti per vedere le foto e i video dei tuoi amici.</span>
             </div>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
+            <div class="form-floating m-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating m-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating">
+            <div class="form-floating m-3">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
 
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Avanti</button>
+            <button id="registerSubmit" type="submit" class=" m-3 w-100 btn btn-lg btn-primary">Avanti</button>
         </form>
     </div>
     <div class="col-12">
