--- a/Instagram/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Instagram/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,7 +12,7 @@
             <div class="contenitoreloggo">
                 <img class="logo justify-content-center" src="/imgInstagram/logotipo-instagram-2016.jpg" alt="Alternate Text" />
             </div>
-            <div class=" ">
+            <div class="m-3 ">
                 <span class="text-center">Iscriviti per vedere le foto e i video dei tuoi amici.</span>
             </div>
             <hr />
@@ -32,11 +32,25 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="p-2">
+                <p>Le persone che usano il nostro servizio potrebbero aver caricato le tue informazioni di contatto su Instagram. <a>Scopri di più</a></p>
+            </div>
+            <div class ="p-2">
+                <p>Iscrivendoti, accetti le nostre Condizioni. Scopri in che modo raccogliamo, usiamo e condividiamo i tuoi dati nella nostra Informativa sulla privacy e in che modo usiamo cookie e tecnologie simili nella nostra Normativa sui cookie.</p>
+            </div>
+            <div class="p-2">
+                <p>Noi Finanziamo i nostri servizi usando i tuoi dati personali per mostrarti le inserzioni.</p>
+            </div>
 
-            <button id="registerSubmit" type="submit" class=" m-3 w-100 btn btn-lg btn-primary">Avanti</button>
+            <button id="registerSubmit" type="submit" class=" m-2 w-100 btn btn-lg btn-primary">Avanti</button>
+            <div class="p-2">
+                <p>Puoi anche segnalare i contenuti che ritieni violino nel tuo Paese senza accedere.</p>
+            </di>
         </form>
     </div>
     <div class="col-12">
+
+
         <section>
             <h3>Use another service to register.</h3>
             <hr />
