aggiunti i  StringLength e error message campi post.titolo    e post.descrizione

--- a/Instagram/Views/Home/Update.cshtml
+++ b/Instagram/Views/Home/Update.cshtml
@@ -18,7 +18,10 @@
             <input asp-for="Post.Descrizione" class="d-block w-100" />
             <span class="text-danger" asp-validation-for="Post.Descrizione"></span>
         </div>
-
+        <div class="mb-3">
+            <label asp-for="Post.Visible" class="form-label"><strong>Visibile</strong></label>
+            <input asp-for="Post.Visible" class="form-check-input" type="checkbox" />
+        </div>
         <div class="text-end">
             <input type="submit" class="btn btn-small btn-info" value="Post Inserito">
         </div>
