--- a/Instagram/Views/Home/Create.cshtml
+++ b/Instagram/Views/Home/Create.cshtml
@@ -6,7 +6,7 @@
         @Html.AntiForgeryToken()
 
         <!-- Aggiungi un campo nascosto per l'ID dell'utente -->
-        <input type="hidden" asp-for="Post.UserId" />
+        
 
         <div class="mb-3">
             <strong>Titolo</strong>
@@ -23,10 +23,14 @@
             <label asp-for="@Model.ImgFile">Image file</label>
             <input type="file" asp-for="@Model.ImgFile" />
         </div>
-
+        <div class="mb-3">
+            <label asp-for="Post.Visible" class="form-label"><strong>Visibile</strong></label>
+            <input asp-for="Post.Visible" class="form-check-input" type="checkbox" />
+        </div>
         <div class="text-end">
             <input type="submit" class="btn btn-small btn-info" value="Post Inserito">
         </div>
     </form>
 </div>
 <a href="@Url.Action("Index", "Home")">Torna in Home </a>
+
