--- a/Instagram/Views/Home/Create.cshtml
+++ b/Instagram/Views/Home/Create.cshtml
@@ -20,8 +20,8 @@
         </div>
         <div class="form-field">
             
-            <label asp-for="@Model.ImgFile">Image file</label>
-            <input type="file" asp-for="@Model.ImgFile" />
+            <label asp-for="ImgFile">Image file</label>
+            <input type="file" asp-for="ImgFile" />
         </div>
         <div class="mb-3">
             <label asp-for="Post.Visible" class="form-label"><strong>Visibile</strong></label>
