--- a/Instagram/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Instagram/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,11 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating m-3">
+                <input asp-for="Input.NomeInsta" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.NomeInsta"></label>
+                <span asp-validation-for="Input.NomeInsta" class="text-danger"></span>
+            </div>
+            <div class="form-floating m-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
